<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/vertical_margin"
        android:paddingRight="@dimen/vertical_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_employee_id_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="@string/head_id"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_employee_name_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:text="@string/head_name"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_employee_age_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:text="@string/head_age"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_employee_wage_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/head_wage"
                android:textStyle="bold"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>