<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/vertical_margin"
        android:paddingRight="@dimen/vertical_margin">

        <EditText
            android:id="@+id/edt_search"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_search" />

        <Button android:id="@+id/btn_search_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:background="@color/colorButton"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_get_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_fetch"
            android:background="@color/colorButton"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>

</ScrollView>